@@ -36,6 +36,7 @@ const struct GlobalDBItem globalDBItems[] = {
   { "_cullElements",		"16",				false, StateDatabase::Locked},
   { "_cullOccluders",		"0",				false, StateDatabase::Locked},
   { "_disableBots",		"0",				false, StateDatabase::Locked},
+  { "_endShotDetection",	"2",				false, StateDatabase::Locked},
   { "_explodeTime",		"5.0",				false, StateDatabase::Locked},
   { "_flagAltitude",		"11.0",				false, StateDatabase::Locked},
   { "_flagEffectTime",		"0.64",				false, StateDatabase::Locked},
